semi fix for the wrapping of the names on bio page

--- a/app/assets/stylesheets/user.css.sass
+++ b/app/assets/stylesheets/user.css.sass
@@ -18,6 +18,9 @@ h2
   padding-bottom: 20px
   position: relative
 
+  .name
+    white-space: nowrap
+
   .avatar
     float: left
     margin: 0 20px 0 0
